# text-to-3d-printer

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  build.sh  color_ply_instructions.md  create-gpu-vm.bat  dockerfile_txt.txt  download_checkpoints.py  patch_sam3d.py  pr_sam3d.md  pyproject.toml
.claude/: settings.local.json
patches/: utils3d_depth_patch.py
